# libtool

./: .cvsignore  .gitignore  .gitmodules  .prev-version  .x-update-copyright  AUTHORS  ChangeLog  ChangeLog.0  ChangeLog.1  ChangeLog.1996  ChangeLog.1997  ChangeLog.1998  ChangeLog.1999  ChangeLog.2000  ChangeLog.2001  ChangeLog.2002  ChangeLog.2003  ChangeLog.2004  ChangeLog.2005  ChangeLog.2006  ChangeLog.2007  ChangeLog.2008  ChangeLog.2009  ChangeLog.2010  ChangeLog.old  HACKING  Makefile.am  Makefile.maint  NEWS  NO-THANKS  PACKAGES  PLATFORMS  PORTING  README  README-alpha  README-automake  README.alpha  README.md  THANKS  TODO  (+28 more)
build-aux/: .gitignore  edit-readme-alpha  extract-trace  fix_prohibit_test_const_follows_var  funclib.sh  general.m4sh  getopt.m4sh  git-log-fix  inline-source  ltmain.in  ltmain.m4sh  no-bogus-m4-defines  options-parser  thanks-gen
build-aux/git-hooks/: commit-msg
cdemo/: .cvsignore  Makefile.am  README  configure.ac  configure.in  foo.c  foo.h  foo1.c  main.c
config/: .cvsignore  general.m4sh  getopt.m4sh  ltmain.in  ltmain.m4sh  mailnotify  mailnotify.m4sh  mkstamp
demo/: .cvsignore  Makefile.am  README  configure.ac  configure.in  dlmain.c  foo.c  foo.h  hello.c  libinfo  main.c  run.test
depdemo/: .cvsignore  Makefile.am  README  configure.ac  configure.in  l1.c  l1.h  l2.c  l2.h  l3.c  l3.h  l4.c  l4.h  main.c  sysdep.h
depdemo/l1/: Makefile.am  l1.c  l1.h
depdemo/l2/: Makefile.am  l2.c  l2.h
depdemo/l3/: Makefile.am  l3.c  l3.h
depdemo/l4/: Makefile.am  l4.c  l4.h
doc/: .cvsignore  .gitignore  Makefile.am  PLATFORMS  libtool.texi  notes.texi  platforms.texi
exe/: Makefile  README  base-txt.tpl  clean-txt.tpl  compile-txt.tpl  execute-txt.tpl  finish-txt.tpl  install-txt.tpl  link-txt.tpl  lt_base.def  lt_clean.def  lt_compile.def  lt_exe.tpl  lt_execute.def  lt_finish.def  lt_install.def  lt_link.def  ltcompile.c  ltconfig.x  ltexe.c  ltmacros.tpl  ltmain.c  ltmain.mk  ltmain.tpl  ltopts.def  ltstr.def  ltstr.tpl  ltversion.c
f77demo/: .cvsignore  Makefile.am  configure.ac
gl/build-aux/: announce-gen.diff  bootstrap.in  do-release-commit-and-tag.diff  extract-trace  funclib.sh  gitlog-to-changelog.diff  inline-source  options-parser
gl/doc/: bootstrap.texi
gl/modules/: all-shells-tests  funclib.sh  funclib.sh-tests  options-parser-tests
instutil/: chmod  ln
libltdl/: .cvsignore  .gitignore  Makefile.am  Makefile.inc  README  README.Android  acconfig.h  argz.c  argz.h  argz_.h  configure.ac  configure.in  loader-dld_link.c  loader-dlopen.c  loader-dyld.c  loader-load_add_on.c  loader-loadlibrary.c  loader-preopen.c  loader-shl_load.c  lt__alloc.c  lt__alloc.h  lt__argz.c  lt__dirent.c  lt__dirent.h  lt__glibc.h  lt__pre89.h  lt__private.h  lt__strl.c  lt_dlloader.c  lt_dlloader.h  lt_error.c  lt_error.h  lt_mutex.c  lt_mutex.h  lt_system.h  ltdl.c  ltdl.h  ltdl.m4  ltdl.mk  memcpy.c  (+6 more)
libltdl/Android/jni/: Android.mk  Application.mk
libltdl/config/: .cvsignore  .gitignore  announce-gen.m4sh  edit-readme-alpha  extract-trace  general.m4sh  getopt.m4sh  ltmain.m4sh  mailnotify.m4sh  mkstamp  options-parser
libltdl/config/git-hooks/: commit-msg
libltdl/libltdl/: lt__alloc.h  lt__argz_.h  lt__dirent.h  lt__glibc.h  lt__private.h  lt__strl.h  lt_dlloader.h  lt_error.h  lt_system.h  ltdl.h  slist.h
libltdl/loaders/: .cvsignore  Makefile.am  dld_link.c  dlopen.c  dyld.c  load_add_on.c  loadlibrary.c  preopen.c  shl_load.c
libltdl/m4/: .gitignore  libtool.m4  ltdl.m4  ltoptions.m4  ltsugar.m4  ltversion.in  lt~obsolete.m4
m4/: .gitignore  argz.m4  autobuild.m4  libtool.m4  ltargz.m4  ltdl.m4  ltoptions.m4  ltsugar.m4  ltversion.in  lt~obsolete.m4  m4.m4
mail/: LTLIBOBJ  aix  amiga  c++  cygwin32  deplibs  deplibs.html  docs  egcs  freebsd  ild.diff  libc_s  patches  perms  rpath  security  sgi  sunos
mdemo/: .cvsignore  Makefile.am  README  configure.ac  configure.in  foo.h  foo1.c  foo2.c  libfoo1.sym  libfoo2.sym  ltdl.c  ltdl.h  ltdls.c  main.c
mdemo/modules/: Makefile.am  foo.h  foo1.c  libfoo1.sym  libfoo2.sym
mdemo2/: .cvsignore  Makefile.am  configure.ac  main.c
pdemo/: .cvsignore  Makefile.am  configure  configure.ac  configure.in
tagdemo/: .cvsignore  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in  foo.cpp  main.cpp
tests/: .cvsignore  .gitignore  ChangeLog  Makefile.am  TODO  am-subdir.at  archive-in-archive.at  assign.test  bindir.at  bug_42313.at  bug_62343.at  bug_71489.at  build-relink.test  build-relink2.test  cdemo-conf.test  cdemo-exec.test  cdemo-make.test  cdemo-shared-make.test  cdemo-shared.test  cdemo-static-exec.test  cdemo-static.test  cdemo-undef.test  cdemo.at  cmdline_wrap.at  configure-funcs.at  configure-iface.at  convenience.at  ctor.at  cwrapper.at  darwin.at  defs  defs.in  defs.m4sh  demo-conf.test  demo-deplibs.test  demo-exec.test  demo-hardcode.test  demo-inst.test  demo-make.test  demo-nofast-make.test  (+160 more)
tests/cdemo/: .gitignore  Makefile.am  configure.ac  foo.c  foo.h  main.c
tests/demo/: .cvsignore  .gitignore  Makefile.am  configure.ac  dlmain.c  foo.c  foo.h  main.c
tests/depdemo/: .cvsignore  .gitignore  Makefile.am  configure.ac  main.c  sysdep.h
tests/depdemo/l1/: Makefile.am  l1.c
tests/depdemo/l2/: Makefile.am  l2.c
tests/depdemo/l3/: Makefile.am  l3.c
tests/depdemo/l4/: Makefile.am  l4.c
tests/f77demo/: Makefile.am  README  config.h  configure.ac  cprogram.c  foo.h  fooc.c  foof.f  foof2.f  foof3.f  fprogram.f
tests/fcdemo/: .gitignore  Makefile.am  README  configure.ac  cprogram.c  foo.h  fooc.c  foof.f90  foof2.f90  foof3.f90  fprogram.f90
tests/mdemo/: .gitignore  Makefile.am  README  configure.ac  foo.h  foo1.c  foo2.c  main.c  mlib.c  sub.c
tests/mdemo2/: .gitignore  Makefile.am  README  configure.ac  main.c
tests/pdemo/: .gitignore  Makefile.am  configure.ac  foo.h  longer_file_name_dlmain.c  longer_file_name_foo.c  longer_file_name_foo2.c  longer_file_name_main.c
tests/tagdemo/: .gitignore  Makefile.am  README  configure.ac  conv.cpp  conv.h  foo.cpp  main.cpp
(+6 files in other folders)
